<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XYInc Android</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="cadastrarPontos">Cadastrar Pontos de Referencia</string>
    <string name="nomePoi">Nome do Ponto de Referência</string>
    <string name="coordenadaX">Coordenada X</string>
    <string name="coordenadaY">Coordenada Y</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuário/Login</string>
    <string name="login">Entrar</string>
    <string name="cadastrarUsuario">Novo Usuário</string>
    <string name="salvar">Salvar</string>
    <string name="nomeUsuario">Nome do Usuario</string>
    <string name="tituloCadastrarUsuario">Cadastrar Usuário</string>
    <string name="cancelar">Cancelar</string>
    <string name="login_existente">Usuário Já Existe</string>
    <string name="usuario_obrigatorio">Campo Usuário é Obrigatório</string>
    <string name="senha_obrigatorio">Campo Senha é Obrigatório</string>
    <string name="nome_obrigatorio">Campo Nome é Obrigatório</string>
    <string name="coordenadax_obrigatorio">Campo Coordenada X é Obrigatório</string>
    <string name="coordenaday_obrigatorio">Campo Coordenada Y é Obrigatório</string>
    <string name="poi_obrigatorio">Campo Nome do Ponto de Referência é Obrigatório</string>
    <string name="sairSistema">Sair do Sistema</string>
    <string name="sobre">Sobre o Sistema</string>
    <string name="listarPOI">Listar POI</string>
    <string name="cadastrarPOI">Cadastrar POI</string>
    <string name="zup_tecnologia"> Zup IT Innovation</string>
    <string name="voltar">Voltar</string>
    <string name="login_nao_existe">Usuário não cadastrado</string>
    <string name="cancelarVoltar">Cancelar/Voltar</string>
    <string name="ref_y">Y:</string>
    <string name="ref_x">X:</string>
    <string name="distancia">Distância</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="referenciaX">Referência X</string>
    <string name="referenciaY">Referência Y</string>
    <string name="listar_pontos">Buscar Pontos</string>
    <string name="sem_resultado">Não encontramos nenhum resultado para a sua pesquisa</string>
    <string name="txtCoordx">Coordenada X:</string>
    <string name="txtCoordy">Coordenada Y:</string>
    <string name="txtDistancia">Distância do Ponto de Referência:</string>
    <string name="campo_buscar_obrigatorio">Os Campos: Distância, Coordenada X e Coordenada Y devem ser preenchido para a busca</string>
    

</resources>
