<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_horizontal"
    android:orientation="vertical"
    android:paddingTop="15dip" >
    
     <TextView
        android:id="@+id/titulo_listar_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/listar_pontos"
        android:textColor="#335085"
        android:textStyle="bold"
        android:textSize="20sp" />
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/input"
        android:gravity="center"
        android:orientation="vertical" >
        
      <EditText
            android:id="@+id/edtDistancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="#00000000"
            android:hint="@string/distancia"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true" />
    </LinearLayout>
       
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="center"
        android:orientation="horizontal" >
      
     <TextView
        android:id="@+id/txtRefX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ref_x"
        android:textColor="#335085"
        android:textStyle="bold"
        android:textSize="20sp" />
        
      <EditText
            android:id="@+id/edtRefX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:inputType="number"
            android:hint="@string/referenciaX"
            android:background="@drawable/input"
            android:maxLength="5"
            android:singleLine="true"
            android:textSize="20sp" />
      
      <TextView
        android:id="@+id/txtRefY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ref_y"
        android:textColor="#335085"
        android:textStyle="bold"
        android:textSize="20sp" />
        
      <EditText
            android:id="@+id/edtRefY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:hint="@string/referenciaY"
            android:inputType="number"
            android:background="@drawable/input"
            android:maxLength="5"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btPesquisar"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:background="@drawable/button_full"
            android:onClick="onClickPesquisar"
            android:text="@string/pesquisar"
            android:textColor="#335085"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/btVoltar"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:background="@drawable/button_full"
            android:onClick="onClickVoltar"
            android:text="@string/voltar"
            android:textColor="#335085"
            android:textSize="20sp" />

     </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="horizontal" >
      
        <ListView
            android:id="@+id/lvPontos"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
        </ListView>
    </LinearLayout>
    
</LinearLayout>