<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dip"
        android:text="@string/app_name"
        android:textColor="#335085"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:paddingLeft="7dip"
            android:singleLine="true"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:maxLength="50"
            android:paddingLeft="7dip"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_full"
            android:onClick="onClickLogin"
            android:text="@string/login"
            android:textColor="#335085"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="15dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btCadastrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_full"
            android:onClick="onClickCadastrar"
            android:text="@string/cadastrarUsuario"
            android:textColor="#335085"
            android:textSize="35sp" />
    </LinearLayout>

</LinearLayout>