<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/txtCoordx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCoordx"
            android:layout_marginRight="5dip" />

        <TextView
            android:id="@+id/txtCoordenadax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip" />

        <TextView
            android:id="@+id/txtCoordy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCoordy"
            android:layout_marginRight="5dip" />

        <TextView
            android:id="@+id/txtCoordenaday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:id="@+id/txtDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDistancia"
            android:layout_marginRight="5dip" />
        
        <TextView
            android:id="@+id/txtDistRef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>